<resources>
    <string name="app_name">Confetti</string>
    <string name="home_item_img_share">home_item_img_share</string>
    <string name="netase_item_img_share">netase_item_img_share</string>
    <string name="login_act_fab_share">login_act_fab_share</string>

    <string name="login_success">登录成功</string>
    <string name="login">登录</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码?</string>
    <string name="go">登录</string>
    <string name="repeat_password">重复密码</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>

</resources>
